After fixing issues in Category align issues in listing page,Filter align in listing page,Detail page extra images in gallery.

--- a/assets/admin/css/style.css
+++ b/assets/admin/css/style.css
@@ -5,6 +5,8 @@
 	height: 44px;
     width: 43px;
     cursor: pointer;
+    margin-left:5px;
+    margin-top:5px;
 }
 .edit_category_image{
 	cursor: pointer;
@@ -82,13 +84,14 @@
     border: 1px solid #cccccc;
     border-radius: 4px;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
-    width: -moz-max-content;
+    max-width: 295px;
     margin-top: 10px;
 }
 .product-cat-images{
     position: relative;
     display: inline-block;
-      padding-top: 10px;
+    padding-top: 10px;
+    margin-left:0px;
 }
 .close-icon a{
     background-color: #333333;
@@ -99,7 +102,7 @@
     opacity: 0.7;
     padding: 3px;
     position: relative;
-    top: -18px;
+    /*top: -18px;*/
 }
 .attribute-clone{
     margin-bottom: 10px;
@@ -126,15 +129,15 @@
 	margin-top:10px !important;
 	/*margin-bottom:10px;*/
 }
-#footer {
+/*#footer {
 	width:100%;
     position:fixed;
-    /*height:50px;*/
+    height:50px;
     bottom:0px;
     left:0px;
     right:0px;
-    /*margin-top: 50px !important;*/
-}
+    margin-top: 50px !important;
+}*/
 .users-icons{
 	color:#4FBFA8;
 }
@@ -169,23 +172,23 @@
 .label-boxes{
 	width:232px !important;
 }
-.dataTables_wrapper{
-	overflow-x: auto !important;
-    width: 1000px; !important;
+.product-details{
+	/*width:100% !important;*/
+	max-width:300px !important;
+	min-width: 240px !important;
 }
-/*.dataTables_filter {
-    float: right;
-    position: fixed;
-    right: 185px;
-    top: 213px;
+.table-content{
+   display: block !important;
+   overflow-x:auto !important;
+   width: 1000px !important;
 }
-.dataTables_length {
-    left: 306px;
-    position: fixed;
-    top: 216px;
-}*/
-
-.col-md-6 {
-    width: 45% !important;
+.product-details-title{
+    max-width: 200px !important;
+    min-width: 140px !important;
 }
-
+.category-product-image{
+	display:flex !important;
+}
+.select-category-images{
+	width:230px;
+}
